  * bug fix: derivation of float boundaries from numbers outside the
    appropriate float range (reported by John Wiseman)
  * improvements to DOCUMENTATION for TYPE and STRUCTURE doc-types:
    allow condition class objects as arguments to DOCUMENTATION and
    (SETF DOCUMENTATION); only find and set documentation for
    structure names for the STRUCTURE doc-type.  (suggested by Gary
    King)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** REMOVE-METHOD returns its generic function argument even when
       the method is not one of the generic functions' methods.
    ** objects declared as MEMBER types can be admissible arguments to 
       structure accessors.
    ** printing characters should simply be printed by the FORMAT ~:C
       directive.

changes in sbcl-0.9.11 relative to sbcl-0.9.10:
  * new platform: experimental support for SBCL x86/Darwin, including
    MacOS X 10.4.5 on Intel.
  * new feature: Unicode character names are now known to the system
    (through CHAR-NAME and NAME-CHAR).
  * new feature: the filesystem location of SBCL's core file is
    exposed to lisp through the variable SB-EXT:*CORE-PATHNAME*.
  * minor incompatible change: the contrib modules SB-POSIX and
    SB-BSD-SOCKETS no longer depend on stub C libraries; the intent of
    this change is to make it easier to distribute
    location-independent binaries.
  * bug fix: as implied by AMOP, standardized classes no longer have
    slots named by external symbols of public packages.  (reported by
    Pascal Costanza)
  * optimization: calling functions via constant symbols -- as in 
    (FUNCALL 'FOO) -- is now roughly as efficient as calling them
    via the function object as in (FUNCALL #'FOO).
  * optimization: on x86 and x86-64, the calling convention for the
    case of dealing with an unknown number of values has been altered
    to be friendlier to the prediction heuristics implemented,
    particularly with reference to CALL and RET pairing.  (thanks to